CHANGES.txt - 02/07/2001
------------------------

CHANGES IN CUPS V1.1.6-3

	- The configure script put the JPEG library before the
	  TIFF library; this caused problems in some
	  configurations since the TIFF library also supports
	  JPEG compression of TIFF images.
	- The updated cupsTempFile() function did not return
	  the filename when called with a filename buffer of
	  NULL (previously it used a static buffer.)
	- FreeBSD uses /dev/unlptN, but NetBSD and OpenBSD use
	  /dev/ulptN.
	- SuSE fix: Exit from child if setgid() or setuid()
	  fails.
	- SuSE fix: Added setgroups() calls after setgid() and
	  setuid() calls.
	- SuSE fix: potential buffer overflows in httpEncode64()
	  calls.
	- SuSE fix: potential buffer overflows in httpSeparate()
	- SuSE fix: potential buffer overflows in ippWrite() for
	  bad input.
	- SuSE fix: potential nul skip in ppd_decode() for
	  missing hex digits.


CHANGES IN CUPS V1.1.6-2

	- Added changes to support NetBSD startup scripts.
	- Added separate compiler options for pstoraster
	  (Ghostscript) to avoid compiler-induced errors
	  from Ghostscript's twisted code.
	- The mime.types file contained syntax errors.
	- Updated the *BSD USB device filenames to use
	  the /dev/unlptN files so that the USB device
	  is not reset prior to printing (causes print
	  corruption on many printers)
	- Added new cupsTempFd() function to avoid serious
	  security bug in glibc fopen() function.  The glibc
	  fopen() function unlinks a file before creating it,
	  which opens up possible symlink attacks.
	- Now reject 0-length names in add-printer and add-class
	  requests.
	- Fix for pstoraster when ZLIB is not available.
	- cupsGetPPD() didn't reconnect when a HTTP connection
	  was lost.
	- SuSE fix: httpConnect() didn't check that the
	  value from gethostbyname() was a valid IPv4 address.
	- SuSE fix: httpConnect() didn't allow file descriptor 0
	  to be used for a socket.
	- SuSE fix: ippRead() didn't confirm that all values in