@@ -1,4 +1,4 @@
-CHANGES.txt - 02/07/2001
+CHANGES.txt - 02/08/2001
 ------------------------
 
 CHANGES IN CUPS V1.1.6-3
@@ -12,6 +12,12 @@ CHANGES IN CUPS V1.1.6-3
 	  NULL (previously it used a static buffer.)
 	- FreeBSD uses /dev/unlptN, but NetBSD and OpenBSD use
 	  /dev/ulptN.
+	- DeletePrinter() didn't remove the printer from any
+	  classes it was a member of.
+	- DeletePrinterFromClass() didn't preserve the
+	  implicit status of a class.
+	- DeletePrinterFromClasses() didn't remove printers
+	  from implicit classes.
 	- SuSE fix: Exit from child if setgid() or setuid()
 	  fails.
 	- SuSE fix: Added setgroups() calls after setgid() and
